<resources>
    <string name="new_features_title">New in Version</string>
    <string name="action_display_all">Display All Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_cq_only">CQ Only</string>
    <string name="action_help">Help</string>
    <string name="action_reply">Reply</string>
    <string name="action_set_rx">Set Rx Freq</string>
    <string name="action_screen_always_on">Keep Display On</string>
    <string name="action_about">About</string>
    <string name="action_alerts">Alerts</string>
    <string name="action_filters">Filters</string>
    <string name="action_sorting">Sorting</string>
    <string name="action_mapping">Mapping</string>
    <string name="dialog_settings_title">"   "Settings</string>
    <string name="dialog_settings_shutdown">Turn off (exit) <b><i>Now</i></b></string>
    <string name="dialog_settings_clear_screen">Clear Screen .....</string>
    <string name="dialog_settings_km_miles">Display Distance in <b>Km</b> or <b>Miles</b> .....</string>
    <string name="dialog_settings_status">Current status .....</string>
    <string name="dialog_settings_port">Change Port Number .....</string>
    <string name="dialog_settings_setup_WSJTX">Setup WSJT-X or JTDX .....</string>
    <string name="dialog_settings_help"><b><i>Turn off (exit) Now</i></b> - choosing this option will immediately close this app.
            \n\n<b><i>Clear Screen</i></b> - Clears screen now or when WSJT-X clears both panels.
            \n\n<b><i>Display Distance in Km or Miles</i></b> - Switches the distance measurement units.
            \n\n<b><i>Current status</i></b> - Displays the current alert, filter, sorting option, and more.
            \n\n<b><i>Change Port Number</i></b> - Changes the UDP port number.  (Only necessary if you change it in WSJT-X).
            \n\n<b><i>Setup WSJT-X</i></b> - Instructions for configuring WSJT-X to send data to this app.
    </string>
    <string name="dialog_distance_title">Select:</string>
    <string name="dialog_distance_km">Distance in <b>Kilometers</b></string>
    <string name="dialog_distance_miles">Distance in <b>Miles</b></string>
    <string name="dialog_distance_dont1_miles">\nThe distance will be shown in <b>miles</b> on all future decodes.</string>
    <string name="dialog_distance_dont1_km">\nThe distance will be shown in <b>kilometers</b> on all future decodes.</string>
    <string name="dialog_clear_screen_title">Clear Screen</string>
    <string name="dialog_clear_screen_now">"   "Clear Screen <b><i>Now</i></b></string>
    <string name="dialog_clear_screen_WSJTX">"   "Clear Screen with WSJT-X .....</string>
    <string name="dialog_clear_screen_help"><b><i>Clear Screen Now</i></b> - choosing this option will immediately clear the main screen.
            \n\n<b><i>Clear Screen with WSJT-X</i></b> - Enables clearing the main screen when WSJT-X clears both panels.
    </string>
    <string name="dialog_clear_screen_WSJTX_title">Clear Screen with WSJT-X</string>
    <string name="dialog_clear_screen_WSJTX_message_help">If you enable this feature then the app screen will clear whenever you clear the WSJT-X screen on your computer.
        \n\nPlease note:
        \n\n1) The app screen will clear when you clear <b><i>both</i></b> WSJT-X panels.  In other words you have to double-click the WSJT-X Erase button.
        \n\n2) It may take a couple of seconds for the app screen to clear.  WSJT-X does not always send the clear message immediately.
        \n\nThis selection is stored when you close the app.
    </string>
    <string name="dialog_clear_screen_help_dont_title">Clear Screen Enabled</string>
    <string name="dialog_clear_screen_help_dont">The app screen will clear when you clear <b><i>both</i></b> WSJT-X panels.  In other words you have to double-click the WSJT-X Erase button.
    </string>
    <string name="dialog_status_mycallgrid">My Call/Grid</string>
    <string name="dialog_status_dxcallgrid">DX Call/Grid</string>
    <string name="dialog_status_freamode">Freq/Mode</string>
    <string name="channel_description">Display WSJT-X Status</string>
    <string name="notification_channel">WSJT-X Monitor Channel</string>
    <string name="notification_channel_id">WSJT-X Monitor Channel ID</string>
    <string name="notification_channel_vib">WSJT-X Monitor Channel Vibrate</string>
    <string name="notification_channel_vib_id">WSJT-X Monitor Channel ID Vibrate</string>
    <string name="notification_channel_sound">WSJT-X Monitor Channel Sound</string>
    <string name="notification_channel_sound_id">WSJT-X Monitor Channel ID Sound</string>
    <string name="notification_channel_vibsound">WSJT-X Monitor Channel Vibrate-Sound</string>
    <string name="notification_channel_vibsound_id">WSJT-X Monitor Channel ID Vibrate-Sound</string>
    <string name="main_display_title">Main Display</string>
    <string name="main_display_text">This is the main display.  It mirrors the Band Activity panel on WSJT-X.</string>
    <string name="main_display_text2">\n\nGreen</string>
    <string name="main_display_text3">" "lines are CQ messages.</string>
    <string name="main_display_text4">\n\nRed</string>
    <string name="main_display_text5">" "lines contain your callsign.</string>
    <string name="main_display_text6">\n\nBold-italics</string>
    <string name="main_display_text7">" "are stations heard for the first time.</string>
    <string name="main_display_text8">\n\nRed text</string>
    <string name="main_display_text8a">" "is the selected DX call.</string>
    <string name="main_display_text9">\n\nYellow</string>
    <string name="main_display_text9a">" "lines are Alerts (see menu).</string>
    <string name="main_display_text10">" "Select station to reply to.</string>
    <string name="main_display_text11">The display scrolls up/down/left/right.  After scrolling the screen will not update for 10 seconds.  A quick tap will restore updates.</string>
    <string name="display_no_conn_text">Currently there is no connection with WSJT-X (or JTDX).  Please check \"Setup WSJT-X or JTDX\" (accessible from menu, Settings option)
        to establish a connection.\n\n
    </string>
    <string name="display_all_title">Display All Messages</string>
    <string name="display_all_text">This display shows all the data from the main display plus all the background messages sent by WSJT-X or JTDX.
        \n\nBackground messages are in dull white.  Other messages are either green (CQ), red (your callsign), or bright white (all else).
        \n\nThe display scrolls up/down/left/right.  After scrolling the screen will not update for 10 seconds.  A quick tap will restore updates.
        \n\nThe lines probably appear cryptic.  Please see <a href="https://sites.google.com/view/display-all-messages-help/home">this webpage</a> for a complete description.
    </string>
    <string name="about_version">Version</string>
    <string name="about_view_eula">View EULA</string>
    <string name="ip_port_title">WSJT-X Configuration</string>
    <string name="ip_port_IP_text">IP Address:</string>
    <string name="ip_port_port_text">Port:</string>
    <string name="ip_port_text">For this app to receive data you have to tell WSJT-X (or JTDX) where to send it.  This is easy to do.
        \n\nFor simple step-by-step setup instructions click the Help button below.</string>
    <string name="ip_port_text2">"  "(Info on using JTAlert with this app is there also).</string>
    <string name="ip_port_text8">\n\nThis window will automatically dismiss when data begins to flow.</string>
    <string name="ip_port_text9">\n\nAlso note that this device must be on the same network as the computer running WSJT-X or JTDX.</string>
    <string name="ip_port_supplement_line1">\n WSJT-X / JTDX Connection \n Established</string>
    <string name="ip_port_supplement_line2">\n\n The results of the next decode\n will be displayed here.\n\n To view background messages\n choose Display All Messages\n from menu.</string>
    <string name="title_text_step1">Setup WSJT-X - Page 1 of 4</string>
    <string name="header_text_step1"><i>This tells WSJT-X (or JTDX) to send\n"    "data to this app.</i>\n\nOpen WSJT-X or JTDX.\nGo to the File menu\nChoose Settings.\n\n(Image scrolls up/down, left/right)</string>
    <string name="title_text_step2">Setup WSJT-X - Page 2 of 4</string>
    <string name="header_text_step2">In the Settings window there are\n"   "several tabs along the top.\nSelect the Reporting tab.\n\n(Image scrolls up/down, left/right)</string>
    <string name="title_text_step3">Setup WSJT-X - Page 3 of 4</string>
    <string name="header_text_step3a">Set the UDP Server field to</string>
    <string name="header_text_step3b">\nSet the UDP Server Port Number to</string>
    <string name="header_text_step3c">\nThen click OK.\n\n(Image scrolls up/down, left/right)</string>
    <string name="jtalert_text">Setup WSJT-X - Page 4 of 4</string>
    <string name="jtalert_header_text"><b>Final Notes</b>
        \n\n<b><i>This Android device</i></b> must be on the same network as the computer running WSJT-X or JTDX.  (It more than likely is).
        \n\n<b><i>JTAlert, GridTracker and many</i></b> similar programs can be used with this app by using their built-in forwarding function.
        <a href="https://sites.google.com/view/usingwsjt-xmonitorwithotherpro/home">This webpage</a> provides details.</string>
    <string name="dialog_details_content_desc">header followed by image by footer</string>
    <string name="dialog_details_content_desc2">the image after header and followed by footer</string>
    <string name="no_wifi_title">WiFi Not Connected</string>
    <string name="no_wifi_text">This application is WiFi only.
        \n\nPlease connect this device to your home WiFi.  The computer running WSJT-X or JTDX must be on the same home network.
        \n\nFor details visit <a href="https://sites.google.com/view/wifi-not-connected/home">this webpage</a>.
        \n\nIf you believe WiFi is connected please verify (via Settings) that your phone has an IP address.  Some phones slip in and out of WiFi.
        For assistance Email <a href="mailto:feedback@feotec.com?subject=WSJT-X Monitor Feedback">feedback@feotec.com</a>.
        \n\nPlease restart this application after connecting to WiFi.
    </string>
    <string name="port_message_title">Input Port Number</string>
    <string name="port_message_text">Port values can range between 1024 and 32767.\n\nIt must match the port specified in WSJT-X (or JTDX).   Click Help for details.</string>
    <string name="port_message_error_title">Port Number Input Error</string>
    <string name="port_message_error_text">Port values must be between 1024 and 32767 inclusive.</string>
    <string name="port_message_success_title">Port Number Changed</string>
    <string name="alert_settings_change">Change</string>
    <string name="alert_settings_test">Test</string>
    <string name="touchable_text_description">Test alert sound and vibration</string>
    <string name="dialog_reply_text0">The app can automatically setup WSJT-X to reply to an alert.
        With this feature, all you have to do is press the WSJT-X <b><i>Enable Tx</i></b> button.
    </string>
    <string name="dialog_reply_text1">To turn this feature on and off press the Reply icon at top of screen (illustrated to the right).</string>
    <string name="dialog_reply_desc">A reply icon, just like an Email reply icon</string>
    <string name="dialog_reply_pre_text0">This app can automatically reply to alerts.</string>
    <string name="dialog_reply_pre_text1">Do a long press (more than one second) on the Reply icon at the top of the screen (and illustrated to the right) for information and setup instructions.</string>
    <string name="dialog_dont_show_message_again">Don\'t show this message again.</string>
</resources>