<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/reply_pre_help_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reply_pre_help_internal_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reply_pre_text0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="#000000"
                android:text="@string/dialog_reply_pre_text0"
                android:textSize="17sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/reply_pre_text1" />

            <TextView
                android:id="@+id/reply_pre_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dialog_reply_pre_text1"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@id/reply_pre_checkBox"
                app:layout_constraintEnd_toStartOf="@id/reply_pre_image"
                app:layout_constraintStart_toStartOf="@id/reply_pre_text0"
                app:layout_constraintTop_toBottomOf="@id/reply_pre_text0" />

            <ImageView
                android:id="@+id/reply_pre_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_reply_desc"
                android:src="@drawable/baseline_reply_black_48"
                app:layout_constraintBottom_toBottomOf="@id/reply_pre_text1"
                app:layout_constraintEnd_toEndOf="@id/reply_pre_text0"
                app:layout_constraintTop_toTopOf="@id/reply_pre_text1" />

            <CheckBox
                android:id="@+id/reply_pre_checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dialog_dont_show_message_again"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/reply_pre_text0"
                app:layout_constraintEnd_toEndOf="@id/reply_pre_text0"
                app:layout_constraintTop_toBottomOf="@id/reply_pre_text1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
