<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/main_display_help_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_display_help_internal_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/main_display_help_text0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/displayAllTextMain"
                android:text="@string/main_display_text"
                android:textSize="17sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/main_display_help_text1" />

            <TextView
                android:id="@+id/main_display_help_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/displayAllTextMain"
                android:text="@string/main_display_text10"
                android:textSize="17sp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@id/main_display_help_text2"
                app:layout_constraintEnd_toEndOf="@id/main_display_help_text0"
                app:layout_constraintStart_toEndOf="@id/main_display_help_image"
                app:layout_constraintTop_toBottomOf="@id/main_display_help_text0" />

            <ImageView
                android:id="@+id/main_display_help_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_reply_desc"
                android:src="@drawable/baseline_reply_red_36"
                app:layout_constraintBottom_toBottomOf="@id/main_display_help_text1"
                app:layout_constraintStart_toStartOf="@id/main_display_help_text0"
                app:layout_constraintTop_toTopOf="@id/main_display_help_text1" />

            <TextView
                android:id="@+id/main_display_help_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/displayAllTextMain"
                android:text="@string/main_display_text11"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/main_display_help_text0"
                app:layout_constraintEnd_toEndOf="@id/main_display_help_text0"
                app:layout_constraintTop_toBottomOf="@id/main_display_help_text1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
