<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/alert_settings_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alert_settings_internal_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/alert_settings_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alert_settings_text_size"
                app:layout_constraintBottom_toBottomOf="@id/alert_settings_button1"
                app:layout_constraintStart_toStartOf="@id/alert_settings_text2"
                app:layout_constraintTop_toTopOf="@id/alert_settings_button1"
                />

            <Button
                android:id="@+id/alert_settings_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/alert_settings_change"
                app:layout_constraintBottom_toTopOf="@id/alert_settings_button2"
                app:layout_constraintEnd_toEndOf="@id/alert_settings_button2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alert_settings_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alert_settings_text_size"
                app:layout_constraintBottom_toBottomOf="@id/alert_settings_button2"
                app:layout_constraintStart_toStartOf="@id/alert_settings_text3"
                app:layout_constraintTop_toTopOf="@id/alert_settings_button2"
                />

            <Button
                android:id="@+id/alert_settings_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alert_settings_change"
                app:layout_constraintBottom_toTopOf="@id/alert_settings_button3"
                app:layout_constraintEnd_toEndOf="@id/alert_settings_button3"
                app:layout_constraintTop_toBottomOf="@id/alert_settings_button1" />

            <TextView
                android:id="@+id/alert_settings_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alert_settings_text_size"
                app:layout_constraintBottom_toBottomOf="@id/alert_settings_button3"
                app:layout_constraintStart_toStartOf="@id/alert_settings_text4"
                app:layout_constraintTop_toTopOf="@id/alert_settings_button3"
                />

            <Button
                android:id="@+id/alert_settings_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alert_settings_change"
                app:layout_constraintBottom_toTopOf="@id/alert_settings_button4"
                app:layout_constraintEnd_toEndOf="@id/alert_settings_button4"
                app:layout_constraintTop_toBottomOf="@id/alert_settings_button2" />

            <TextView
                android:id="@+id/alert_settings_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/alert_settings_text_size"
                android:onClick="alertSettingsButtonSoundHelp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/touchable_text_description"
                app:layout_constraintBottom_toBottomOf="@id/alert_settings_button4"
                app:layout_constraintEnd_toStartOf="@id/alert_settings_button3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/alert_settings_button4"
                />

            <Button
                android:id="@+id/alert_settings_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/alert_settings_test"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/alert_settings_text3"
                app:layout_constraintTop_toBottomOf="@id/alert_settings_button3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
